feature/#115 - Implement JWT security layer and restructure API controllers
minor(backend-api): add Spring Security configuration and AuthenticationController
minor(backend-api): rename ErrorHandlerController to GlobalErrorHandlerController
minor(backend-api): update pom.xml, application.yaml and openapi.yaml
minor(backend-api): add auth and news use cases (LoginUserUseCase, ValidateUserUseCase, GetLatestNewsUseCase)
minor(backend-api): add custom exceptions and request filter wrapper

minor(security-spring-jwt): add JwtAuthenticationFilter
minor(security-spring-jwt): add UserPrivateSecurityDetails and UserSecurityDto models
minor(security-spring-jwt): add TokenValidationService
minor(security-spring-jwt): update module pom.xml

patch(frontend-web-angular): remove obsolete pom.xml
